--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "3.3.7",
     "css-loader": "^0.28.7",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
-    "jquery.easing": "^1.4.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "react-dom": "^16.1.1",
