--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "^0.1.0-11",
     "react": "^16.1.1"
   }
 }
