--- a/package.json
+++ b/package.json
@@ -14,29 +14,33 @@
   "author": "Can Bulut Bayburt",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "bootstrap": "3.3.7",
-    "css-loader": "^0.28.7",
-    "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.2.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "react-dom": "^16.1.1",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1"
-  },
-  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "3.3.7",
+    "css-loader": "^0.28.7",
+    "extract-loader": "^2.0.1",
+    "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.2.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "react-dom": "^16.1.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
     "react": "^16.1.1"
   }
 }
