--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rimraf dist && rimraf docs",
     "build:umd": "webpack",
     "build:min": "webpack --env.min",
-    "build:docs": "webpack --config webpack.docs.config.js",
+    "build:docs": "webpack --config webpack.docs.prod.js",
     "build": "npm run clean && npm run build:umd && npm run build:min",
-    "start": "webpack-dev-server --config webpack.docs.config.js"
+    "start": "webpack-dev-server --config webpack.docs.dev.js"
   },
   "author": "Can Bulut Bayburt",
   "license": "MIT",
@@ -30,11 +30,13 @@
     "less": "^3.5.3",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "react-dom": "^16.1.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "react": "^16.1.1"
