--- a/package.json
+++ b/package.json
@@ -2,41 +2,22 @@
   "name": "react-bootstrap-input",
   "version": "0.0.1",
   "description": "A collection of ReactJS components which render bootstrap input elements.",
-  "main": "dist/react-bootstrap-input.js",
+  "main": "lib/index.js",
+  "module": "dist/react-bootstrap-input.es.js",
   "scripts": {
     "clean": "rimraf dist && rimraf docs",
-    "build:umd": "webpack",
-    "build:min": "webpack --env.min",
-    "build:docs": "webpack --config webpack.docs.prod.js",
-    "build": "npm run clean && npm run build:umd && npm run build:min",
-    "start": "webpack-dev-server --config webpack.docs.dev.js"
+    "build:babel": "babel src -d lib",
+    "build": "npm run clean && npm run build:babel"
   },
   "author": "Can Bulut Bayburt",
   "license": "MIT",
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "^0.1.0-11",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "3.3.7",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.2.1",
-    "less": "^3.5.3",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "react-dom": "^16.1.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "babel-preset-stage-0": "^6.24.1",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "react": "^16.1.1"
