--- a/package.json
+++ b/package.json
@@ -14,23 +14,40 @@
     "clean": "rimraf dist && rimraf lib && rimraf docs",
     "build:dist": "rollup -c",
     "build:lib": "babel src -d lib",
-    "build": "npm run clean && npm run build:lib && npm run build:dist"
+    "build:docs": "webpack",
+    "build": "npm run clean && npm run build:lib && npm run build:dist && npm run build:docs"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-uglify": "^4.0.0",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "react": "^16.1.1"
+    "react": "^16.1.1",
+    "react-dom": "^16.4.1"
   },
   "files": [
     "dist",
