--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^1.0.0",
+    "eslint": "^5.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
