--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.2"
+  },
   "peerDependencies": {
     "react": "^16.1.1"
   },
